--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,24 +1,71 @@
 body {
     padding: 3em;
+    background-image: url(https://media.publit.io/file/Valley-day.png);
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
+.title {
+    font-weight: 710;
+    -webkit-text-stroke-width: 0.4px;
+    -webkit-text-stroke-color: #E1F9C0 ;
+}
+
+.inicio{ 
+    font-weight: 710;
+    -webkit-text-stroke-width: 0.4px;
+    -webkit-text-stroke-color: #227745 ;
+}
 form {
     width: 30em;
     padding: 2em;
-    border: solid rgb(9, 97, 43) 3px;
+    background: #11998e9c;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #3fad69a9, #11996596);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #34a05d9f, #119965a1); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 #Val {
     background-color: rgba(0, 128, 0, 0.589);
+    color: #B6E5D0;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 
 #Inv {
     background-color: rgba(255, 0, 0, 0.678);
-    color: rgb(255, 255, 255);
+    color: #DCF4C2;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 
+label {
+    font-weight: 700;
+    color: #2D5857;
+
+}
+
+input {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 10px 10px -12px inset, rgba(0, 0, 0, 0.3) 0px 14px 26px -13px inset;
+    background-color: rgba(255, 255, 255, 0.568);
+}
 nav {
     background-color: rgba(51, 131, 20, 0.699);
+}
+
+section {
+    background-image: url(https://i.pinimg.com/originals/92/f9/5d/92f95d5d3ff21aeee60cd9805e8252cb.jpg);
+    background-repeat: repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    border-top: dashed green 3px;
+}
+
+.data {
+    font-weight: 800;
+    color: rgb(8, 70, 14);
+
 }
 
 .nav-link {
